<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/semi_circle_background_rounded_edges">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_selectprofile"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorApp2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/profiletitle"
            android:textColor="@color/color2"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/firs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar_selectprofile"
        >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_selectprofile">

        <Button
            android:id="@+id/cancelButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorApp2"
            android:text="@string/cancel" />

        <TableLayout
            android:id="@id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="@dimen/_40sdp"
            android:gravity="center_horizontal">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/profiletxt1"
                    android:layout_height="wrap_content"
                    android:width="150dp"
                    android:background="@drawable/selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingLeft="20dp"
                    android:text="@string/profile1"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:buttonTint="@color/color0" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/profiletxt2"
                    android:layout_height="wrap_content"
                    android:width="150dp"
                    android:background="@drawable/selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingLeft="20dp"
                    android:text="@string/profile2"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:buttonTint="@color/color0" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/profiletxt3"
                    android:layout_height="wrap_content"
                    android:width="150dp"
                    android:background="@drawable/selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingLeft="20dp"
                    android:text="@string/profile3"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:buttonTint="@color/color0" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/profiletxt4"
                    android:layout_height="wrap_content"
                    android:width="150dp"
                    android:background="@drawable/selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingLeft="20dp"
                    android:text="@string/profile4"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:buttonTint="@color/color0" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/profiletxt5"
                    android:layout_height="wrap_content"
                    android:width="150dp"
                    android:background="@drawable/selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingLeft="20dp"
                    android:text="@string/profile5"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:buttonTint="@color/color0" />


            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cancelButton"
            android:layout_alignStart="@id/tableLayout"
            android:layout_marginLeft="20dp"
            android:text="@string/profileinfo" />


    </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>