<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/semi_circle_background_rounded_edges">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_selectmusiccancel"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorApp2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/music_selection"
            android:textColor="@color/color2"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/firs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar_selectmusiccancel"
        >
    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_selectmusiccancel">


        <Button
            android:id="@+id/cancelButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorApp2"
            android:text="@string/cancel" />

        <TableLayout
            android:id="@id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/soundtxt1"
                    android:layout_height="wrap_content"
                    android:width="150dp"
                    android:background="@drawable/selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingLeft="20dp"
                    android:text="@string/music1"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:buttonTint="@color/color0" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/soundtxt2"
                    android:layout_height="wrap_content"
                    android:width="150dp"
                    android:background="@drawable/selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingLeft="20dp"
                    android:text="@string/music2"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:buttonTint="@color/color0" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/soundtxt3"
                    android:layout_height="wrap_content"
                    android:width="150dp"
                    android:background="@drawable/selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingLeft="20dp"
                    android:text="@string/music3"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:buttonTint="@color/color0" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/soundtxt4"
                    android:layout_height="wrap_content"
                    android:width="150dp"
                    android:background="@drawable/selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingLeft="20dp"
                    android:text="@string/music4"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:buttonTint="@color/color0" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/soundtxt5"
                    android:layout_height="wrap_content"
                    android:width="150dp"
                    android:background="@drawable/selector"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingLeft="20dp"
                    android:text="@string/music5"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:buttonTint="@color/color0" />


            </TableRow>


        </TableLayout>


    </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>