<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_selectmusic"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorApp2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musictitle"
            android:textColor="@color/color2"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnBack2"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnBack2"
            android:layout_width="24dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:background="@drawable/semi_circle_background"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_selectmusic">

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="7dp"
            app:cardElevation="7dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            app:cardUseCompatPadding="true">
        >

        <TableLayout
            android:id="@id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/selector"
                android:clickable="false"
                android:focusable="false">

                <TextView
                    android:id="@+id/MusicTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/music_selection"
                    android:textAppearance="?android:attr/textAppearanceMedium"

                    />
            </TableRow>

            <TableRow
                android:id="@+id/MusicRow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/selector"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/MusicSelectedTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/music_selection"
                    android:textAppearance="?android:attr/textAppearanceListItem" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector"
                android:clickable="false"
                android:focusable="false">

                <TextView
                    android:id="@+id/VolumeTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/volume"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/TextSound"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector"
                android:clickable="false"
                android:focusable="false"
                android:layout_margin="20dp">

                <SeekBar
                    android:id="@+id/volumeBar"
                    android:layout_width="@dimen/_160sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:indeterminate="false"
                    android:theme="@style/SCBSwitch" />


                <TextView
                    android:id="@+id/volumeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:paddingRight="20dp"
                    android:text="995"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>


        </TableLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>